--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Falcon | Dashboard &amp; Web App Template</title>
+    <title>True PnL</title>
 
     <!-- ===============================================-->
     <!--    Favicons-->
     <!-- ===============================================-->
-    <link rel="apple-touch-icon" sizes="180x180" href="http://rtwelfare.club/assets/img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="http://rtwelfare.club/assets/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="http://rtwelfare.club/assets/img/favicons/favicon-16x16.png">
-    <link rel="shortcut icon" type="image/x-icon" href="http://rtwelfare.club/assets/img/favicons/favicon.ico">
-    <meta name="msapplication-TileImage" content="/assets/img/favicons/mstile-150x150.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="http://true-pnl.rtwelfare.club/Approved.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="http://true-pnl.rtwelfare.club/Approved.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="http://true-pnl.rtwelfare.club/Approved.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="http://true-pnl.rtwelfare.club/Approved.svg">
+    <meta name="msapplication-TileImage" content="http://true-pnl.rtwelfare.club/Approved.svg">
     <meta name="theme-color" content="#ffffff">
     <script src="http://rtwelfare.club/assets/js/config.js"></script>
     <script src="http://rtwelfare.club/vendors/simplebar/simplebar.min.js"></script>
@@ -54,7 +54,7 @@
                 <button class="btn navbar-toggler-humburger-icon navbar-toggler me-1 me-sm-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarStandard" aria-controls="navbarStandard" aria-expanded="false" aria-label="Toggle Navigation"><span class="navbar-toggle-icon"><span class="toggle-line"></span></span></button>
                 <a class="navbar-brand me-1 me-sm-3" href="index.html">
                     <div class="d-flex align-items-center">
-                        <img class="me-2" src="http://rtwelfare.club/assets/img/icons/spot-illustrations/falcon.png" alt="" width="40" /><span class="font-sans-serif">falcon</span>
+                        <img class="me-2" src="Approved.svg" alt="" width="40" /><span class="font-sans-serif">truePnL</span>
                     </div>
                 </a>
 
