--- a/Details.html
+++ b/Details.html
@@ -1077,7 +1077,7 @@
 
                 </div>
 
-                <footer class="footer">
+                <!--<footer class="footer">
                     <div class="row g-0 justify-content-between fs--1 mt-4 mb-3">
                         <div class="col-12 col-sm-auto text-center">
                             <p class="mb-0 text-600">Thank you for creating with Falcon <span class="d-none d-sm-inline-block">| </span><br class="d-sm-none" /> 2022 &copy; <a href="https://themewagon.com">Themewagon</a></p>
@@ -1086,7 +1086,7 @@
                             <p class="mb-0 text-600">v3.13.0</p>
                         </div>
                     </div>
-                </footer>
+                </footer>-->
 
             </div>
 
