--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <link href="http://rtwelfare.club/vendors/choices/choices.min.css" rel="stylesheet" />
     <link href="http://rtwelfare.club/css/Custome.css" rel="stylesheet" />
     <link rel="stylesheet" href="http://rtwelfare.club/Plugins/cal-heatmap/cal-heatmap.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
 
 </head>
 
@@ -82,8 +83,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-body h-100 pe-0 div_loader" id="tbl_monthly">
-                                <img src="http://rtwelfare.club/img/loading-sm.gif" />
+                            <div class="card-body h-100 pe-0 div_loader" id="tbl_monthly11">
+                                <table class="table table-bordered table-striped fs--1 mb-0" id="tbl_monthly">
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Win Rate</th>
+                                            <th>Realised PNL</th>
+                                            <th>Charges Taxes</th>
+                                            <th>Net Realised PNL</th>
+                                            <th> Monthly PNL</th>
+                                            <th style="font-size: 12px;width: 12%;" scope="col">Info</th>
+                                        </tr>
+                                    </thead>
+
+                                </table>
                             </div>
                         </div>
                     </div>
@@ -130,6 +144,8 @@
     <script src="http://rtwelfare.club/plugins/waitMe/waitMe.min.js"></script>
     <script src="http://rtwelfare.club/js/global.js?v=WzyuzPZ3Bneqdkb-2vYnarcEgLCFtw2KVEuBCI2hORE"></script>
     <script src="http://rtwelfare.club/js/Layout.js?v=rKEWKuYUoOgMuMCwbsEw04hmb2Rs0myJWrVLBWt-k8A"></script>
+    <script src="https://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js"></script>
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
     <script>
         (function ($) {
             function PNLDashboard() {
@@ -145,51 +161,157 @@
 
 
                 function bindPNLSummary() {
-                    $.getJSON(`${domainName}pnl/userInfo.json?v=${timeSpam}`, function (userInfoArr) {
+                    var modelJson =new Array();
 
+                    $.getJSON(`${domainName}pnl/userInfo.json?v=${timeSpam}`, function (userInfoArr) {
                         $.getJSON(`${domainName}pnl/getAccountSummary.json?v=${timeSpam}`, function (result) {
-                            $("#tbl_monthly").empty();
-                            var $html = `<div class="h-100"><div class="table-responsive scrollbar"><table class="table table-bordered" id="myTable"><thead><tr><th style="font-size: 12px;width: 20%;" scope="col">Name</th><th style="font-size: 12px;width: 20%;" scope="col">Realised PNL</th><th style="font-size: 12px;width: 20%;" scope="col">Charges Taxes</th><th style="font-size: 12px;width: 20%;" scope="col">Net Realised PNL</th><th style="font-size: 12px;width: 20%;" scope="col">Info</th></tr></thead><tbody>`;
+                          //  $("#tbl_monthly").empty();
+                           // var $html = `<div class="h-100"><div class="table-responsive scrollbar"><table class="table table-bordered" id="myTable"><thead><tr><th style="font-size: 12px;width: 20%;" scope="col">Name</th><th style="font-size: 12px;width: 20%;" scope="col">Realised PNL</th><th style="font-size: 12px;width: 20%;" scope="col">Charges Taxes</th><th style="font-size: 12px;width: 20%;" scope="col">Net Realised PNL</th><th style="font-size: 12px;width: 20%;" scope="col">Info</th></tr></thead><tbody>`;
                             if (userInfoArr.length > 0) {
+
+                                var allUserObj = {};
 
                                 for (var i = 0; i < userInfoArr.length; i++) {
                                     let userSummary = result.filter(function (el) {
                                         return el.name === userInfoArr[i].userid;
                                     });
 
-                                   
-                                        $html += `<tr><td class="align-middle white-space-nowrap">
-                                        <a class="text-800" href="Details.html?user=${userInfoArr[i].userid}">
-                              <div class="d-flex align-items-center">
-                                <div class="avatar avatar-xl">
-                                  <img class="rounded-circle" src="${userInfoArr[i].profilepic}" alt="">
-                                </div>
-                                <h6 class="mb-0 ps-2 name">${userInfoArr[i].username}</h6>
-                              </div>
-                            </a></td>`;
-
                                     if (userSummary.length > 0) {
-                                        $html += `<td><div class="display-4 fs-4 mb-2 fw-normal font-sans-serif"  data-countup='${JSON.stringify(userSummary[0].realisedpnl).replace('endvalue', 'endValue').replace('decimalplaces', 'decimalPlaces')}'>${userSummary[0].realisedpnl.prefix + userSummary[0].realisedpnl.endvalue.toFixed(userSummary[0].realisedpnl.decimalplaces) + userSummary[0].realisedpnl.suffix} </div></td>`;
-                                        $html += `<td><div class="display-4 fs-4 mb-2 fw-normal font-sans-serif" style="color:#000;" data-countup='${JSON.stringify(userSummary[0].chargestaxes).replace('endvalue', 'endValue').replace('decimalplaces', 'decimalPlaces')}'>${userSummary[0].chargestaxes.prefix + userSummary[0].chargestaxes.endvalue.toFixed(userSummary[0].chargestaxes.decimalplaces) + userSummary[0].chargestaxes.suffix} </div></td>`;
-                                        $html += `<td><div class="display-4 fs-4 mb-2 fw-normal font-sans-serif" style="color:${userSummary[0].netrealisedpnl.actualvalue > 0 ? '#10b983' : userSummary[0].netrealisedpnl.actualvalue < 0 ? '#f35631' : '#000'};" data-countup='${JSON.stringify(userSummary[0].netrealisedpnl).replace('endvalue', 'endValue').replace('decimalplaces', 'decimalPlaces')}'>${userSummary[0].netrealisedpnl.prefix + userSummary[0].netrealisedpnl.endvalue.toFixed(userSummary[0].netrealisedpnl.decimalplaces) + userSummary[0].realisedpnl.suffix} </div></td>`;
-                                    } else {
-                                        $html += `<td>`;
-                                        $html += `<td>`;
-                                        $html += `<td>`;
+                                        allUserObj = userSummary[0];
+                                        allUserObj.username = userInfoArr[i].username;
+                                        allUserObj.userid = userInfoArr[i].userid;
+                                        allUserObj.profilepic = userInfoArr[i].profilepic;
+                                        allUserObj.twitterurl = userInfoArr[i].twitterurl;
+                                        allUserObj.userid = userInfoArr[i].userid;
+                                        allUserObj.pnlsource = userInfoArr[i].pnlsource;
                                     }
-                                    $html += `<td><a target="_blank" href="${userInfoArr[i].twitterurl}"> <span class="fab fa-twitter"></span></a> <a target="_blank" href="Details.html?user=${userInfoArr[i].userid}"> <span class="far fa-eye"></span></a></td></tr>`;
+
+                                    modelJson.push(allUserObj);
+
+                                //    $html += `<tr><td class="align-middle white-space-nowrap">
+                                //            <a class="text-800" href="Details.html?user=${userInfoArr[i].userid}">
+                                //  <div class="d-flex align-items-center">
+                                //    <div class="avatar avatar-xl">
+                                //      <img class="rounded-circle" src="${userInfoArr[i].profilepic}" alt="">
+                                //    </div>
+                                //    <h6 class="mb-0 ps-2 name">${userInfoArr[i].username}</h6>
+                                //  </div>
+                                //</a></td>`;
+
+                                    //if (userSummary.length > 0) {
+                                    //    $html += `<td><div class="display-4 fs-4 mb-2 fw-normal font-sans-serif"  data-countup='${JSON.stringify(userSummary[0].realisedpnl).replace('endvalue', 'endValue').replace('decimalplaces', 'decimalPlaces')}'>${userSummary[0].realisedpnl.prefix + userSummary[0].realisedpnl.endvalue.toFixed(userSummary[0].realisedpnl.decimalplaces) + userSummary[0].realisedpnl.suffix} </div></td>`;
+                                    //    $html += `<td><div class="display-4 fs-4 mb-2 fw-normal font-sans-serif" style="color:#000;" data-countup='${JSON.stringify(userSummary[0].chargestaxes).replace('endvalue', 'endValue').replace('decimalplaces', 'decimalPlaces')}'>${userSummary[0].chargestaxes.prefix + userSummary[0].chargestaxes.endvalue.toFixed(userSummary[0].chargestaxes.decimalplaces) + userSummary[0].chargestaxes.suffix} </div></td>`;
+                                    //    $html += `<td><div class="display-4 fs-4 mb-2 fw-normal font-sans-serif" style="color:${userSummary[0].netrealisedpnl.actualvalue > 0 ? '#10b983' : userSummary[0].netrealisedpnl.actualvalue < 0 ? '#f35631' : '#000'};" data-countup='${JSON.stringify(userSummary[0].netrealisedpnl).replace('endvalue', 'endValue').replace('decimalplaces', 'decimalPlaces')}'>${userSummary[0].netrealisedpnl.prefix + userSummary[0].netrealisedpnl.endvalue.toFixed(userSummary[0].netrealisedpnl.decimalplaces) + userSummary[0].realisedpnl.suffix} </div></td>`;
+                                    //} else {
+                                    //    $html += `<td>`;
+                                    //    $html += `<td>`;
+                                    //    $html += `<td>`;
+                                    //}
+                                   // $html += `<td><a target="_blank" href="${userInfoArr[i].twitterurl}"> <span class="fab fa-twitter"></span></a> <a target="_blank" href="Details.html?user=${userInfoArr[i].userid}"> <span class="far fa-eye"></span></a></td></tr>`;
 
                                 }
 
+                                var table = $('#tbl_monthly').DataTable({
+                                    paging: false,
+                                    ajax: function (dataSent, callback, settings) {
+                                        callback({ data: modelJson });
+                                    },
+                                    paging: false,
+                                    drawCallback: function () {
+                                        $('.sparkline')
+                                            .map(function () {
+                                                return $('canvas', this).length ? null : this;
+                                            })
+                                            .sparkline('html', {
+                                                type: 'bar',
+                                                width: '250px',
+                                                'negBarColor': '#f35631', 'barColor': '#10b983'
+                                            });
+                                    },
+                                    columns: [
+                                        {
+                                            data: null,
+                                            bSortable: true,
+                                            render: function (data, type, row, meta) {
+                                                return `<a href="Details.html?user=${row.userid}">
+                                                            <div class="d-flex align-items-center">
+                                                                <div class="avatar avatar-xl">
+                                                                    <img class="rounded-circle" src="${(row.profilepic != null ? row.profilepic : "http://rtwelfare.club/img/default-Profile.png")}" alt="">
+                                                                </div>
+                                                                <h6 class="mb-0 ps-2">${row.username}</h6>
+                                                            </div>
+                                                        </a>`;
+                                            }
+                                        },
+                                        {
+                                            data: null,
+                                            bSortable: true,
+                                            render: function (data, type, row, meta) {
+                                                if (type === "display") {
+                                                    return `${row.winrate.toFixed(2)} %`;
+                                                }
+                                                return row.winrate;
+                                            }
+                                        },
+                                        {
+                                            data: null,
+                                            bSortable: true,
+                                            render: function (data, type, row, meta) {
+                                                if (type === "display") {
+                                                    // format data here
+                                                    return `${row.realisedpnl.prefix}${row.realisedpnl.endvalue.toFixed(row.realisedpnl.decimalplaces)}${row.realisedpnl.suffix}`; // This is formatted data
+                                                }
+                                                return row.realisedpnl.actualvalue;
+                                            }
+                                        },
+                                        {
+                                            data: null,
+                                            bSortable: true,
+                                            render: function (data, type, row, meta) {
+                                                if (type === "display") {
+                                                    // format data here
+                                                    return `${row.chargestaxes.prefix}${row.chargestaxes.endvalue.toFixed(row.chargestaxes.decimalplaces)}${row.chargestaxes.suffix}`; // This is formatted data
+                                                }
+                                                return row.chargestaxes.actualvalue;
+                                            }
+                                        },
+                                        {
+                                            data: null,
+                                            bSortable: true,
+                                            render: function (data, type, row, meta) {
+                                                var colour = row.netrealisedpnl.actualvalue < 0 ? '#f35631' : '#10b983';
+                                                return type === 'display' ? `<span style="color:${colour}">${row.netrealisedpnl.prefix}${row.netrealisedpnl.endvalue.toFixed(row.netrealisedpnl.decimalplaces)}${row.netrealisedpnl.suffix}</span>` : row.netrealisedpnl.actualvalue;
+
+                                            }
+                                        },
+                                        {
+                                            data: 'barchart',
+                                            bSortable: false,
+                                            render: function (data, type, row, meta) {
+                                                return type === 'display'
+                                                    ? '<span class="sparkline">' + data.toString() + '</span>'
+                                                    : data;
+                                            }
+                                        },
+                                        {
+                                            data: 'barchart',
+                                            bSortable: false,
+                                            render: function (data, type, row, meta) {
+                                                return `<a target="_blank" href="${row.twitterurl}"> <span class="fab fa-twitter"></span></a> <a target="_blank" href="${row.pnlsource}"> <span class="far fa-eye"></span></a>`;
+                                            }
+                                        }
+                                    ]
+                                });
+
                             } else {
-                                $html += `<tr><td colspan="5">Data not foud</td></tr>`;
+                               // $html += `<tr><td colspan="5">Data not foud</td></tr>`;
                             }
 
-                            $("#tbl_monthly").html($html);
+                           // $("#tbl_monthly").html($html);
                             //setTimeout(countupInit, 1);
                         });
 
-                    });
+                    });                  
 
 
                 }
