removed some sections

--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
                                             render: function (data, type, row, meta) {
                                                 if (type === "display") {
                                                     // format data here
-                                                    return row.total; // This is formatted data
+                                                    return row.totaltradingdays; // This is formatted data
                                                 }
-                                                return row.total;
+                                                return row.totaltradingdays;
                                             }
                                         },
                                         {
