--- a/index.html
+++ b/index.html
@@ -42,7 +42,36 @@
     <link href="http://rtwelfare.club/css/Custome.css" rel="stylesheet" />
     <link rel="stylesheet" href="http://rtwelfare.club/Plugins/cal-heatmap/cal-heatmap.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+    <style>
+        .hover-actions {
+            display: block !important;
+        }
 
+        .btn-sm {
+            --falcon-btn-padding-y: 0.1875rem;
+            --falcon-btn-padding-x: 0.5rem;
+            --falcon-btn-font-size: 0.775rem;
+            --falcon-btn-border-radius: 0.25rem;
+        }
+
+        .sparkline_span {
+            width: 90px;
+            height: 30px;
+        }
+
+        .stretched-link::after {
+            position: relative;
+        }
+
+        canvas {
+            width: 60px;
+            height: 30px;
+        }
+
+        .smallfont {
+            font-size: smaller;
+        }
+    </style>
 </head>
 
 <body>
@@ -63,10 +92,8 @@
             </nav>
             <div class="content">
                 <div class="row g-3 mb-3">
-                    <div class="col-lg-12 ps-lg-2 mb-3">
+                    <div class="col-lg-12 ps-lg-2 mb-3 desktop_div">
                         <div class="card h-lg-100">
-
-                            
                             <div class="card-body h-100 pe-0 div_loader">
                                 <div class="table-responsive scrollbar">
                                     <table class="table table-bordered table-striped fs--1 mb-0" id="tableUsers">
@@ -85,6 +112,17 @@
                                         </thead>
 
                                     </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card mb-3 mobile_div">
+                        <div class="card-body bg-light">
+                            <div class="row h-100 g-3">
+                                <div class="col-md-12">
+                                    <div class="col-xxl-12 col-md-12 div-dark" id="true_nl_rows">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -109,6 +147,85 @@
     <!-- ===============================================-->
     <!--    JavaScripts-->
     <!-- ===============================================-->
+    <script id="pnl_row_template" type="text/x-jquery-tmpl">
+        <div class="row g-0 align-items-center py-2 position-relative">
+            <div class="col-2">
+                <div class="avatar avatar-xl me-3">
+                    <img class="avatar-name rounded-circle bg-soft-success text-dark" src="${(profilepic != null ? profilepic:'http://rtwelfare.club/img/default-Profile.png')}" alt="">
+                </div>
+            </div>
+
+            <div class="col-5">
+                <a class="text-800 stretched-link" href="/Truepnl/GetByUser/${userid}">${username}</a>
+            </div>
+            <div class="col-3">
+                <div class="sparkline_span">${barchart.toString()}</div>
+            </div>
+
+            <div class="col-2">
+                <div class="hover-actions end-0 top-50 translate-middle-y">
+                    <a class="btn btn-light border-300 btn-sm text-600" data-bs-toggle="tooltip" data-bs-placement="top" href="${twitterurl}" target="_blank" aria-label="Download" data-bs-original-title="Twitter">
+                        <i class="bi bi-twitter"></i>
+                    </a>
+                    <a class="btn btn-light border-300 btn-sm text-600 shadow-none" href="${pnlsource}" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="PNLSource" data-bs-original-title="PNL Source">
+                        <i class="bi bi-eye"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="row g-0 align-items-center py-2 position-relative">
+            <div class="col-3 smallfont">
+                Win Rate:
+            </div>
+
+            <div class="col-3">
+                ${winrate.toFixed(2)}
+            </div>
+            <div class="col-3 smallfont">
+                Realised PNL:
+            </div>
+
+            <div class="col-3">
+                ${realisedpnl.prefix}${realisedpnl.endvalue.toFixed(realisedpnl.decimalplaces)}${realisedpnl.suffix}
+            </div>
+        </div>
+
+        <div class="row g-0 align-items-center py-2 position-relative">
+            <div class="col-3 smallfont">
+                Max Drawdown:
+            </div>
+
+            <div class="col-3" style="color:#f35631">
+                ${maxdrawdown}
+            </div>
+            <div class="col-3 smallfont">
+                Charges Taxes:
+            </div>
+
+            <div class="col-3">
+                ${chargestaxes.prefix}${chargestaxes.endvalue.toFixed(chargestaxes.decimalplaces)}${chargestaxes.suffix}
+            </div>
+        </div>
+
+        <div class="row g-0 align-items-center py-2 position-relative">
+            <div class="col-3 smallfont">
+                Number of days:
+            </div>
+
+            <div class="col-3">
+                ${totaltradingdays}
+            </div>
+            <div class="col-3 smallfont">
+                Net Realised PNL:
+            </div>
+
+            <div class="col-3" style="color:${netrealisedpnl.actualvalue < 0 ? '#f35631' : '#10b983'}">
+                ${netrealisedpnl.prefix}${netrealisedpnl.endvalue.toFixed(netrealisedpnl.decimalplaces)}${netrealisedpnl.suffix}
+            </div>
+        </div>
+        <hr class="text-200">
+    </script>
 
     <script type="text/javascript" src="http://rtwelfare.club/js/jquery.min.js"></script>
     <script type="text/javascript" src="http://rtwelfare.club/js/loader.js?v=KXV31S_OXfRaU7HS4GRp9l7h3PLpv7yOL0Xb0GoN6LQ"></script>
@@ -134,8 +251,13 @@
     <script src="http://rtwelfare.club/js/Layout.js?v=rKEWKuYUoOgMuMCwbsEw04hmb2Rs0myJWrVLBWt-k8A"></script>
     <script src="https://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.js"></script>
     <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+    <script src="http://rtwelfare.club/js/jquery.tmpl.js"></script>
     <script>
         (function ($) {
+            window.onresize = function (event) {
+                flexTable();
+            };
+
             function PNLDashboard() {
                 var $this = this, form;
                 var timeSpam = new Date().getTime();
@@ -149,12 +271,12 @@
 
 
                 function bindPNLSummary() {
-                    var modelJson =new Array();
+                    var modelJson = new Array();
 
                     $.getJSON(`${domainName}pnl/userInfo.json?v=${timeSpam}`, function (userInfoArr) {
                         $.getJSON(`${domainName}pnl/getAccountSummary.json?v=${timeSpam}`, function (result) {
-                          //  $("#tbl_monthly").empty();
-                           // var $html = `<div class="h-100"><div class="table-responsive scrollbar"><table class="table table-bordered" id="myTable"><thead><tr><th style="font-size: 12px;width: 20%;" scope="col">Name</th><th style="font-size: 12px;width: 20%;" scope="col">Realised PNL</th><th style="font-size: 12px;width: 20%;" scope="col">Charges Taxes</th><th style="font-size: 12px;width: 20%;" scope="col">Net Realised PNL</th><th style="font-size: 12px;width: 20%;" scope="col">Info</th></tr></thead><tbody>`;
+                            //  $("#tbl_monthly").empty();
+                            // var $html = `<div class="h-100"><div class="table-responsive scrollbar"><table class="table table-bordered" id="myTable"><thead><tr><th style="font-size: 12px;width: 20%;" scope="col">Name</th><th style="font-size: 12px;width: 20%;" scope="col">Realised PNL</th><th style="font-size: 12px;width: 20%;" scope="col">Charges Taxes</th><th style="font-size: 12px;width: 20%;" scope="col">Net Realised PNL</th><th style="font-size: 12px;width: 20%;" scope="col">Info</th></tr></thead><tbody>`;
                             if (userInfoArr.length > 0) {
 
                                 var allUserObj = {};
@@ -173,7 +295,7 @@
                                         allUserObj.userid = userInfoArr[i].userid;
                                         allUserObj.pnlsource = userInfoArr[i].pnlsource;
                                     }
-                                    modelJson.push(allUserObj);                                
+                                    modelJson.push(allUserObj);
                                 }
 
                                 var table = $('#tableUsers').DataTable({
@@ -200,13 +322,13 @@
                                             bSortable: true,
                                             render: function (data, type, row, meta) {
                                                 return `<a href="Details.html?user=${row.userid}">
-                                                            <div class="d-flex align-items-center">
-                                                                <div class="avatar avatar-xl">
-                                                                    <img class="rounded-circle" src="${(row.profilepic != null ? row.profilepic : "http://rtwelfare.club/img/default-Profile.png")}" alt="">
-                                                                </div>
-                                                                <h6 class="mb-0 ps-2">${row.username}</h6>
-                                                            </div>
-                                                        </a>`;
+                                                                    <div class="d-flex align-items-center">
+                                                                        <div class="avatar avatar-xl">
+                                                                            <img class="rounded-circle" src="${(row.profilepic != null ? row.profilepic : "http://rtwelfare.club/img/default-Profile.png")}" alt="">
+                                                                        </div>
+                                                                        <h6 class="mb-0 ps-2">${row.username}</h6>
+                                                                    </div>
+                                                                </a>`;
                                             }
                                         },
                                         {
@@ -257,7 +379,7 @@
                                             render: function (data, type, row, meta) {
                                                 if (type === "display") {
                                                     // format data here
-                                                    return row.maxdrawdown.toFixed(2); // This is formatted data
+                                                    return row.maxdrawdown; // This is formatted data
                                                 }
                                                 return row.maxdrawdown;
                                             }
@@ -292,15 +414,29 @@
                                     ]
                                 });
 
+                                $("#pnl_row_template").tmpl(modelJson).appendTo("#true_nl_rows");
+                                $('.sparkline_span')
+                                    .map(function () {
+                                        var $this = $('canvas', this).length ? null : this;
+                                        return $this;
+                                    })
+                                    .sparkline('html', {
+                                        type: 'bar',
+                                        width: '450px',
+                                        'negBarColor': '#f35631', 'barColor': '#10b983'
+                                    });
+
+                                flexTable();
+
                             } else {
-                               // $html += `<tr><td colspan="5">Data not foud</td></tr>`;
+                                // $html += `<tr><td colspan="5">Data not foud</td></tr>`;
                             }
 
-                           // $("#tbl_monthly").html($html);
+                            // $("#tbl_monthly").html($html);
                             //setTimeout(countupInit, 1);
                         });
 
-                    });                  
+                    });
 
 
                 }
@@ -339,6 +475,16 @@
                         tr[i].style.display = "none";
                     }
                 }
+            }
+        }
+
+        function flexTable() {
+            if ($(window).width() < 768) {
+                $(".mobile_div").show();
+                $(".desktop_div").hide();
+            } else {
+                $(".mobile_div").hide();
+                $(".desktop_div").show();
             }
         }
     </script>
