--- a/index.html
+++ b/index.html
@@ -129,16 +129,7 @@
                     </div>
                 </div>
 
-                <!--<footer class="footer">
-                    <div class="row g-0 justify-content-between fs--1 mt-4 mb-3">
-                        <div class="col-12 col-sm-auto text-center">
-                            <p class="mb-0 text-600">Thank you for creating with Falcon <span class="d-none d-sm-inline-block">| </span><br class="d-sm-none" /> 2022 &copy; <a href="https://themewagon.com">Themewagon</a></p>
-                        </div>
-                        <div class="col-12 col-sm-auto text-center">
-                            <p class="mb-0 text-600">v3.13.0</p>
-                        </div>
-                    </div>
-                </footer>-->
+               
 
             </div>
 
@@ -163,12 +154,12 @@
             </div>
 
             <div class="col-2">
-                <div class="hover-actions end-0 top-50 translate-middle-y">
+                <div class="hover-actions top-50 translate-middle-y">
                     <a class="btn btn-light border-300 btn-sm text-600" data-bs-toggle="tooltip" data-bs-placement="top" href="${twitterurl}" target="_blank" aria-label="Download" data-bs-original-title="Twitter">
-                        <i class="bi bi-twitter"></i>
+                        <span class="fab fa-twitter"></span>
                     </a>
                     <a class="btn btn-light border-300 btn-sm text-600 shadow-none" href="${pnlsource}" target="_blank" data-bs-toggle="tooltip" data-bs-placement="top" aria-label="PNLSource" data-bs-original-title="PNL Source">
-                        <i class="bi bi-eye"></i>
+                        <span class="far fa-eye"></span>
                     </a>
                 </div>
             </div>
